@@ -161,6 +161,7 @@
 <input type="hidden" name="num" value="{{ num }}" />
 <input type="hidden" name="uuid" value="{{ uuid }}" />
 <input type="hidden" name="post_fee" value="{{ post_fee }}" />
+<input type="hidden" name="discount_fee" value="{{ discount_fee }}" />
 <input type="hidden" id="payment" name="payment" value="{{ payment }}" />
 <input type="hidden" name="receiver_name" value="{{ address.receiver_name }}" />
 <input type="hidden" name="receiver_state" value="{{ address.receiver_state }}" />
