@@ -1,5 +1,6 @@
 ########### 2015-7-14 #################
 alter table flashsale_productdetail add column mama_discount int(11) NOT NULL default 100;
+alter table flashsale_trade add column discount_fee  double precision NOT NULL;
 ########### 2015-7-10 #################
 alter table shop_items_product add column model_id bigint NOT NULL DEFAULT 0;
 ########### 2015-7-6 #################
